Actions
Bug #10665
closedfcoe: NULL pointer errors
Start date:
2019-04-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../common/io/fcoe/fcoe_fc.c: In function 'fcoe_tx_frame': ../../common/io/fcoe/fcoe_fc.c:211:17: error: comparison between pointer and integer [-Werror] if (ret_cookie != NULL) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ed74d7a11db9675a8e4047a9aab3f173ca890c6e
commit ed74d7a11db9675a8e4047a9aab3f173ca890c6e Author: Toomas Soome <tsoome@me.com> Date: 2019-05-21T06:14:30.000Z 10665 fcoe: NULL pointer errors Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions